src/components/EditableTd/styles.css
.NLT__td {
	border-top: 0 !important;
	border-bottom: 1px solid var(--background-modifier-border) !important;
	border-left: 1px solid var(--background-modifier-border) !important;
	border-right: 0 !important;
	vertical-align: top;
	padding: 0 !important;
	overflow: visible;
}

.NLT__tbody > .NLT__tr > .NLT__td:last-child {
	border-top: 0 !important;
	border-bottom: 0 !important;
}

.NLT__tbody >.NLT__tr:last-child>.NLT__td:last-child {
	border-bottom: 0 !important;
}

.NLT__tfoot > .NLT__tr >.NLT__td {
	border: 0 !important;
}

.NLT__td-container {
	display: flex;
	min-height: 1.9rem;
}

.NLT__td-cell-container {
	overflow: hidden;
	user-select: none;
}

.NLT__td-cell-padding {
	padding: var(--nlt-cell-spacing-x) var(--nlt-cell-spacing-y);
}

